--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 main {
   height: 100%;
   overflow-y: scroll;
-  background-color: rgba(8, 14, 44, 0.532);
+  background-color: rgb(0, 0, 0);
 }
 
 .App-logo {
@@ -23,7 +23,7 @@ main {
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
